# conan-streebog

./: CMakeLists.txt  README.md  conanfile.py  streebog.patch
test_package/: CMakeLists.txt  conanfile.py  main.c
